[package]
name = "reqwest-ratelimit"
authors = ["Darksome <dev@darksome.com>"]
version = "0.1.1"
edition = "2021"
description = "Rate-limit middleware for reqwest."
repository = "https://github.com/xDarksome/reqwest-ratelimit"
license = "MIT"
keywords = ["reqwest", "http", "middleware", "ratelimit"]
categories = ["web-programming::http-client"]

[dependencies]
async-trait = "0.1"
http = "1.1.0"
reqwest = { version = "0.12.0", default-features = false }
reqwest-middleware = "0.3.0"
